Fix the alignment of very small contents in prose menubar buttons

--- a/src/editor.css
+++ b/src/editor.css
@@ -82,9 +82,9 @@
   background: var(--_b);
   color: var(--_f);
   border: 1px solid var(--_r);
-  text-align: center;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   position: relative;
 }
 
